test/fail/error_cyclic/error_cyclic_foo.sest
require ErrorCyclicBar

module ErrorCyclicFoo = struct
  let main() = ()
end
